Updated text descriptions

--- a/imageprocessingbasics/templatematching.ipynb
+++ b/imageprocessingbasics/templatematching.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN35thNbYxePFznAGxDD+WT",
+      "authorship_tag": "ABX9TyODrat5AaMvMC5rDG2suEOx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,7 +140,7 @@
         "*   http://docs.opencv.org/modules/imgproc/doc/object_detection.html?highlight=matchtemplate#matchtemplate\n",
         "\n",
         "\n",
-        "This function returns in result a similarity map, in the form of an image. The maximum of this map will indicate where is the pattern located. \n",
+        "This function returns in result a **similarity map**, in the form of an image. The maximum of this map will indicate where is the pattern located. \n",
         "\n"
       ]
     },
@@ -151,18 +151,18 @@
       },
       "source": [
         "#Compute the similarity map\n",
-        "res = cv2.matchTemplate(im,temp,cv2.TM_CCORR_NORMED)\n",
+        "sim_map = cv2.matchTemplate(im,temp,cv2.TM_CCORR_NORMED)\n",
         "\n",
         "#The returned field is a numpy array of real values\n",
-        "print(res.dtype)\n",
+        "print(sim_map.dtype)\n",
         "\n",
         "plt.figure(figsize=(10,10))\n",
-        "plt.imshow(res)\n",
+        "plt.imshow(sim_map)\n",
         "plt.colorbar(fraction=0.03)\n",
         "\n",
         "#Check the max and min values\n",
-        "print('Maximum', np.max(res))\n",
-        "print('Minimum', np.min(res))\n"
+        "print('Maximum', np.max(sim_map))\n",
+        "print('Minimum', np.min(sim_map))\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -187,9 +187,9 @@
         "id": "abM3Olxdnd7R"
       },
       "source": [
-        "min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(res)\n",
-        "print('Max pixel', max_loc)\n",
-        "print('Min pixel', min_loc)"
+        "min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(sim_map)\n",
+        "print('Max. pixel:', max_loc)\n",
+        "print('Min. pixel:', min_loc)"
       ],
       "execution_count": null,
       "outputs": []
@@ -200,7 +200,11 @@
         "id": "zc6zkMZEuL0u"
       },
       "source": [
-        "OpenCV has several functions to draw on the images. They are quite useful for debugging and to show results:\n",
+        "OpenCV has several functions to draw on the images. They are quite useful for debugging and to show results.\n",
+        "\n",
+        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_gui/py_drawing_functions/py_drawing_functions.html#drawing-functions\n",
+        "\n",
+        "For instance:\n",
         "\n",
         "```\n",
         "cv2.circle(img, center, radius, color, thickness)\n",
@@ -253,7 +257,7 @@
         "id": "nqX4tXz9w_ve"
       },
       "source": [
-        "# Homework\n",
+        "# Homework #1\n",
         "\n",
         "Read about and change and play with the similarity metric considered in the function `matchTemplate` and see the results:\n",
         "\n",
