Added search in scale pyramid

--- a/imageprocessingbasics/templatematching.ipynb
+++ b/imageprocessingbasics/templatematching.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODrat5AaMvMC5rDG2suEOx",
+      "authorship_tag": "ABX9TyM5lusGV90rQs7uihFEplUX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,7 +151,7 @@
       },
       "source": [
         "#Compute the similarity map\n",
-        "sim_map = cv2.matchTemplate(im,temp,cv2.TM_CCORR_NORMED)\n",
+        "sim_map = cv2.matchTemplate(im,temp,cv2.TM_CCOEFF_NORMED)\n",
         "\n",
         "#The returned field is a numpy array of real values\n",
         "print(sim_map.dtype)\n",
@@ -189,6 +189,7 @@
       "source": [
         "min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(sim_map)\n",
         "print('Max. pixel:', max_loc)\n",
+        "print('Max. value:',max_val)\n",
         "print('Min. pixel:', min_loc)"
       ],
       "execution_count": null,
@@ -268,6 +269,252 @@
         "*  CV_TM_CCOEFF\n",
         "*  CV_TM_CCOEFF_NORMED"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pJl5UN8sD08X"
+      },
+      "source": [
+        "# Template matching in multiple scales\n",
+        "\n",
+        "What happens when the size of the template is different than the image because of the scale? \n",
+        "\n",
+        "We need to search for the template in multiple scales in the image. For that, we can use image pyramids.\n",
+        "\n",
+        "https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_pyramids/py_pyramids.html"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q2Y7fgf5CznN"
+      },
+      "source": [
+        "im = io.imread('https://robotics.upo.es/~lmercab/rva/book-174.jpg')\n",
+        "temp = io.imread('https://robotics.upo.es/~lmercab/rva/book_template4.jpg')\n",
+        "\n",
+        "plt.figure()\n",
+        "plt.imshow(im)\n",
+        "\n",
+        "plt.figure(figsize=(0.35,0.35))\n",
+        "plt.imshow(temp)\n",
+        "\n",
+        "plt.figure()\n",
+        "plt.imshow(temp)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QBLaUcp-h3W1"
+      },
+      "source": [
+        "If we create the similarity map at the original scale, the template will not match"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wHy6C3EMDoSg"
+      },
+      "source": [
+        "#Compute the similarity map\n",
+        "sim_map = cv2.matchTemplate(im,temp,cv2.TM_CCORR_NORMED)\n",
+        "\n",
+        "#The returned field is a numpy array of real values\n",
+        "print(sim_map.dtype)\n",
+        "\n",
+        "max_val_scales = [] \n",
+        "max_loc_scales = [] \n",
+        "\n",
+        "plt.figure(figsize=(10,10))\n",
+        "plt.imshow(sim_map)\n",
+        "plt.colorbar(fraction=0.03)\n",
+        "\n",
+        "min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(sim_map)\n",
+        "\n",
+        "max_val_scales.append(max_val)\n",
+        "max_loc_scales.append(max_loc)\n",
+        "\n",
+        "print('Max. pixel:', max_loc_scales[0])\n",
+        "print('Max. value:',max_val_scales[0])\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xyX_OosDlPCb"
+      },
+      "source": [
+        "def drawObject(image,template,max_loc):\n",
+        "  #Store the height and width of the template:\n",
+        "  h=template.shape[0]\n",
+        "  w=template.shape[1]\n",
+        "\n",
+        "  #We draw a rectangle of the same size as the template at the maximum location\n",
+        "  #bottom_right is the location of the bottom right pixel with respect to that\n",
+        "  #maximum\n",
+        "  bottom_right = (max_loc[0] + w, max_loc[1] + h)\n",
+        "  cv2.rectangle(im_draw,max_loc, bottom_right, 255, 2)\n",
+        "\n",
+        "  #We draw a circle at the maximum location\n",
+        "  cv2.circle(im_draw,max_loc,10,255,2); \n",
+        "\n",
+        "\n",
+        "im_draw = im.copy()\n",
+        "\n",
+        "drawObject(im_draw,temp,max_loc_scales[0])\n",
+        "\n",
+        "plt.figure(figsize=(10,10))\n",
+        "plt.imshow(im_draw)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ARSEHq6YiFs6"
+      },
+      "source": [
+        "We can use the pyrDown function in OpenCV to generate downscaled versions of the image by octaves. \n",
+        "\n",
+        "Please notice the scale of the axes in the figures.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VZRwSUCgmTLR"
+      },
+      "source": [
+        "#Dowsample image by 2\n",
+        "imrgb_2 = cv2.pyrDown(im)\n",
+        "#Downsample the former by 2 (so the original by 4)\n",
+        "imrgb_4 = cv2.pyrDown(imrgb_2)\n",
+        "\n",
+        "plt.figure(figsize=(13,13))\n",
+        "plt.subplot(1,3,1)\n",
+        "plt.imshow(im)\n",
+        "plt.title('Original Scale')\n",
+        "plt.subplot(1,3,2)\n",
+        "plt.imshow(imrgb_2)\n",
+        "plt.title('Downsampled 1 octave down')\n",
+        "plt.subplot(1,3,3)\n",
+        "plt.imshow(imrgb_4)\n",
+        "plt.title('Downsampled 2 octaves down')\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YHFfqmZ6imql"
+      },
+      "source": [
+        "Let's compute the similarity map at those new scales:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oz1QRzOKoYFx"
+      },
+      "source": [
+        "#Compute the similarity map\n",
+        "sim_map = cv2.matchTemplate(imrgb_2,temp,cv2.TM_CCORR_NORMED)\n",
+        "\n",
+        "min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(sim_map)\n",
+        "print('Max. pixel:', max_loc)\n",
+        "print('Max. value:',max_val)\n",
+        "\n",
+        "max_val_scales.append(max_val)\n",
+        "max_loc_scales.append(max_loc)\n",
+        "\n",
+        "im_draw = imrgb_2.copy()\n",
+        "\n",
+        "drawObject(im_draw,temp,max_loc_scales[1])\n",
+        "\n",
+        "plt.figure(figsize=(10,10))\n",
+        "plt.subplot(1,2,1)\n",
+        "plt.imshow(sim_map)\n",
+        "plt.colorbar(fraction=0.03)\n",
+        "plt.subplot(1,2,2)\n",
+        "plt.imshow(im_draw)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TEfcZSShMrxx"
+      },
+      "source": [
+        "#Compute the similarity map\n",
+        "sim_map = cv2.matchTemplate(imrgb_4,temp,cv2.TM_CCORR_NORMED)\n",
+        "\n",
+        "min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(sim_map)\n",
+        "print('Max. pixel:', max_loc)\n",
+        "print('Max. value:',max_val)\n",
+        "\n",
+        "max_val_scales.append(max_val)\n",
+        "max_loc_scales.append(max_loc)\n",
+        "\n",
+        "print(max_loc_scales)\n",
+        "\n",
+        "im_draw = imrgb_4.copy()\n",
+        "\n",
+        "drawObject(im_draw,temp,max_loc_scales[2])\n",
+        "\n",
+        "plt.figure(figsize=(10,10))\n",
+        "plt.subplot(1,2,1)\n",
+        "plt.imshow(sim_map)\n",
+        "plt.colorbar(fraction=0.03)\n",
+        "plt.subplot(1,2,2)\n",
+        "plt.imshow(im_draw)\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WzUm4bCrivlD"
+      },
+      "source": [
+        "If the template is found in one scale, we can estimate the bounding box in the original scale by scaling back the positions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KQ5TMa2CO8lw"
+      },
+      "source": [
+        "#Show the maximum in the original image. We have to re-scale up\n",
+        "\n",
+        "p = max_loc_scales[1]\n",
+        "\n",
+        "im_draw = im.copy()\n",
+        "\n",
+        "top_left = (2*p[0], 2*p[1])\n",
+        "bottom_right = (2*p[0] + 2*temp.shape[1], 2*p[1] + 2*temp.shape[0])\n",
+        "cv2.rectangle(im_draw,top_left, bottom_right, 255, 2)\n",
+        "\n",
+        "plt.figure(figsize=(10,10))\n",
+        "plt.imshow(im_draw)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
