Textual labels in output

--- a/deeplearningbasics/learning_imageclassification.ipynb
+++ b/deeplearningbasics/learning_imageclassification.ipynb
@@ -4,17 +4,18 @@
   "metadata": {
     "colab": {
       "name": "learning-imageclassification.ipynb",
-      "provenance": [],
       "private_outputs": true,
+      "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNa56/LG2Ch9MrMeks5sF9o",
+      "authorship_tag": "ABX9TyPfghZkD+zUk6sPS3NEh1Tl",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -30,8 +31,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jqsP6F6cYuxK",
-        "colab_type": "text"
+        "id": "jqsP6F6cYuxK"
       },
       "source": [
         "# Introduction"
@@ -40,8 +40,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bJjGdFqaYtjT",
-        "colab_type": "text"
+        "id": "bJjGdFqaYtjT"
       },
       "source": [
         "In this session we will learn to create and train a simple network for image classification.\n",
@@ -62,8 +61,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3n2ul0gomSDm",
-        "colab_type": "text"
+        "id": "3n2ul0gomSDm"
       },
       "source": [
         "# Loading data"
@@ -72,8 +70,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZutggoEPmLba",
-        "colab_type": "text"
+        "id": "ZutggoEPmLba"
       },
       "source": [
         "For training, we will be using data from the **CIFAR dataset**\n",
@@ -92,9 +89,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uwPF_AnkmFGT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "uwPF_AnkmFGT"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -127,14 +122,13 @@
         "print(y_train.shape)\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OcoFX_umq5Kj",
-        "colab_type": "text"
+        "id": "OcoFX_umq5Kj"
       },
       "source": [
         "# Creating our CNN"
@@ -143,8 +137,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wnl2Hz1nq3oU",
-        "colab_type": "text"
+        "id": "wnl2Hz1nq3oU"
       },
       "source": [
         "The next lines create a simple network with several convolutional and maxpool layers, followed by fully connected layers, stacked in a sequential way for classification.\n",
@@ -156,9 +149,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ff5Qsufnra3r",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ff5Qsufnra3r"
       },
       "source": [
         "model = tf.keras.Sequential()\n",
@@ -177,14 +168,13 @@
         "\n",
         "print(model.summary())\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "F2JOm7aZufBu",
-        "colab_type": "text"
+        "id": "F2JOm7aZufBu"
       },
       "source": [
         "# Training"
@@ -193,8 +183,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_3FvxXyVuhLL",
-        "colab_type": "text"
+        "id": "_3FvxXyVuhLL"
       },
       "source": [
         "The next lines allow to train the model using the data from CIFAR-10 downloaded above.\n",
@@ -208,9 +197,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xxQ4UiVQujSp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xxQ4UiVQujSp"
       },
       "source": [
         "model.compile(loss=\"categorical_crossentropy\",\n",
@@ -219,14 +206,13 @@
         "\n",
         "_ = model.fit(x_train, y_train, epochs=10, verbose = 1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xeYLSqKywVeN",
-        "colab_type": "text"
+        "id": "xeYLSqKywVeN"
       },
       "source": [
         "# Evaluation"
@@ -235,8 +221,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "W1Y-oUXR6hKl",
-        "colab_type": "text"
+        "id": "W1Y-oUXR6hKl"
       },
       "source": [
         "Let's check the accuracy for the test set."
@@ -245,23 +230,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Nms5SjKCwZMd",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Nms5SjKCwZMd"
       },
       "source": [
         "_ , test_acc = model.evaluate(x_test, y_test)\n",
         "\n",
         "print('Accuracy:', test_acc*100)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5I02ywLH7Fcr",
-        "colab_type": "text"
+        "id": "5I02ywLH7Fcr"
       },
       "source": [
         "You can enhance the accuracy by adapting learning parameters (training the model longer, etc), adding more data (we are using already all images from CIFAR-10) and playing with the network architecture (complexity, layers, etc).\n",
@@ -274,8 +256,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xskPn3GgwESq",
-        "colab_type": "text"
+        "id": "xskPn3GgwESq"
       },
       "source": [
         "# Inference"
@@ -284,8 +265,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bav7hkZiiX7d",
-        "colab_type": "text"
+        "id": "bav7hkZiiX7d"
       },
       "source": [
         "Once our network is trained, it can be used to infer the category of an image"
@@ -294,29 +274,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gm9Dg_MrwGHH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "gm9Dg_MrwGHH"
       },
       "source": [
         "import numpy as np\n",
         "\n",
+        "cifar10_labels = ['airplane', 'automobile', 'bird','cat','deer','dog','frog',\n",
+        "'horse','ship', 'truck']\n",
+        "\n",
         "prediction = model.predict(x_test)\n",
+        "\n",
+        "plt.figure()\n",
+        "plt.imshow(x_test[100], cmap=plt.cm.binary)\n",
+        "\n",
         "print(prediction[100])\n",
         "print(\"Predicción del modelo: \", np.argmax(prediction[100]) )\n",
+        "print(\"Predicción del modelo: \", cifar10_labels[np.argmax(prediction[100])] )\n",
         "\n",
+        "plt.figure()\n",
         "plt.imshow(x_test[350], cmap=plt.cm.binary)\n",
+        "\n",
         "print(prediction[350])\n",
-        "print(\"Predicción del modelo: \", np.argmax(prediction[350]) )\n"
+        "print(\"Predicción del modelo: \", np.argmax(prediction[350]) )\n",
+        "print(\"Predicción del modelo: \", cifar10_labels[np.argmax(prediction[350])] )\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Xwy3WXaj9omH",
-        "colab_type": "text"
+        "id": "Xwy3WXaj9omH"
       },
       "source": [
         "# Storing the network"
@@ -325,8 +313,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "L9ao3vqE9yPc",
-        "colab_type": "text"
+        "id": "L9ao3vqE9yPc"
       },
       "source": [
         "We will store the network weights for future use. In this example, we will store it in Google Drive, but you can use the same functions to save the model locally.\n",
@@ -337,23 +324,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WNiv4SVt9854",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WNiv4SVt9854"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UjnCvPkX_ZzY",
-        "colab_type": "text"
+        "id": "UjnCvPkX_ZzY"
       },
       "source": [
         "We are goint to save the whole model. That is, the model and the resultant weights. There are other options, like saving only the weights\n",
@@ -365,21 +349,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YMm-fGwJ-i3a",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YMm-fGwJ-i3a"
       },
       "source": [
         "model.save('/content/drive/My Drive/colabfiles/classif.h5')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rWe9gQbfEDfm",
-        "colab_type": "text"
+        "id": "rWe9gQbfEDfm"
       },
       "source": [
         "We unmount the drive. \n",
@@ -392,15 +373,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qqmEd0nIAm3Q",
-        "colab_type": "code",
-        "colab": {}
+        "id": "qqmEd0nIAm3Q"
       },
       "source": [
         "%ls '/content/drive/My Drive/colabfiles/'\n",
         "drive.flush_and_unmount()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
