Added test images

--- a/deeplearningbasics/deploying_imageclassification.ipynb
+++ b/deeplearningbasics/deploying_imageclassification.ipynb
@@ -4,11 +4,11 @@
   "metadata": {
     "colab": {
       "name": "deploying-imageclassification.ipynb",
-      "provenance": [],
       "private_outputs": true,
+      "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPTMqlCnJGbD0Fbi0VbjD2k",
+      "authorship_tag": "ABX9TyORIfmuasZRiJMaXmD3bldk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Q49tF4sm2J4L",
-        "colab_type": "text"
+        "id": "Q49tF4sm2J4L"
       },
       "source": [
         "# Introduction"
@@ -40,8 +39,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rjS9FyyX2NNc",
-        "colab_type": "text"
+        "id": "rjS9FyyX2NNc"
       },
       "source": [
         "In this part, we will see how to use a model already trained in our code with OpenCV.\n",
@@ -52,8 +50,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BDKongL6FizI",
-        "colab_type": "text"
+        "id": "BDKongL6FizI"
       },
       "source": [
         "# Loading data and models"
@@ -62,8 +59,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rDzuvSKWFSCw",
-        "colab_type": "text"
+        "id": "rDzuvSKWFSCw"
       },
       "source": [
         "Let's load the model we trained in the previous session from file. We use in the virtual machine the Google Drive, which is mounted.\n",
@@ -75,9 +71,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lPwzc8rJE5dk",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lPwzc8rJE5dk"
       },
       "source": [
         "#Import OpenCV\n",
@@ -85,24 +79,27 @@
         "#Import tensorflow\n",
         "import tensorflow as tf\n",
         "\n",
+        "#We use the library scikit to read images from url \n",
+        "#In OpenCV, the function to read from file is cv2.imread\n",
+        "from skimage import io\n",
+        "\n",
         "#Mount the drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cspwphInG3Rb",
-        "colab_type": "text"
+        "id": "cspwphInG3Rb"
       },
       "source": [
         "I am assuming you have a folder called **colabfiles** in your Google Drive **root** folder. \n",
         "\n",
-        "Within the folder, we have an image called **test.jpg**, and the model **classif.h5**.\n",
+        "Within the folder, we have the model **classif.h5**.\n",
         "\n",
         "If the folders and files are called differently, change the paths and names.\n"
       ]
@@ -110,9 +107,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MZLavo8LG099",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MZLavo8LG099"
       },
       "source": [
         "#Let's load the CNN model using the Keras API\n",
@@ -120,14 +115,13 @@
         "model = tf.keras.models.load_model('/content/drive/My Drive/colabfiles/classif.h5')\n",
         "print(model.summary())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CKIta01dKnnv",
-        "colab_type": "text"
+        "id": "CKIta01dKnnv"
       },
       "source": [
         "Load the image and show it. Matplotlib assumes that images are RGB, and OpenCV stores them as BGR"
@@ -136,31 +130,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G2WYF4_DHAJY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "G2WYF4_DHAJY"
       },
       "source": [
-        "#Let's load an image\n",
-        "im = cv2.imread('/content/drive/My Drive/colabfiles/test.jpg')\n",
         "\n",
         "#Unmount the drive if we are not using it more\n",
         "drive.flush_and_unmount()\n",
         "\n",
+        "#Let's load an image\n",
+        "imrgb = io.imread('https://robotics.upo.es/~lmercab/rva/test.jpg')\n",
+        "\n",
         "#We can use OpenCV in Colab, but not its function imshow\n",
         "#We use matplotlib instead\n",
         "from matplotlib import pyplot as plt\n",
-        "imrgb = cv2.cvtColor(im, cv2.COLOR_BGR2RGB)\n",
+        "\n",
         "plt.imshow(imrgb, cmap=plt.cm.binary)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CrroiLDLajqP",
-        "colab_type": "text"
+        "id": "CrroiLDLajqP"
       },
       "source": [
         "# Using our CNN for prediction"
@@ -169,8 +161,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2f4eryXIK673",
-        "colab_type": "text"
+        "id": "2f4eryXIK673"
       },
       "source": [
         "We can process patches through our network. Recall our network receives as inputs 32x32 images (normalized between 0 and 1) and outputs probabilities for each of the 10 classes of CIFAR-10"
@@ -179,9 +170,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tcIIGVbuK91v",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tcIIGVbuK91v"
       },
       "source": [
         "import numpy as np\n",
@@ -202,14 +191,13 @@
         "\n",
         "print(\"Predicción del modelo: \", cifar10_labels[np.argmax(prediction[0])] )\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vjiQ4qlzavqh",
-        "colab_type": "text"
+        "id": "vjiQ4qlzavqh"
       },
       "source": [
         "We can use our trained network to look for cars in the image. Also, we want to detect multiple cars, not only one.\n",
@@ -220,9 +208,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5RHNDHPCRsmq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5RHNDHPCRsmq"
       },
       "source": [
         "#Loop over the image looking for cars\n",
@@ -240,14 +226,13 @@
         "     \n",
         "plt.imshow(im_result, cmap=plt.cm.binary)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aPG_23CXbfTf",
-        "colab_type": "text"
+        "id": "aPG_23CXbfTf"
       },
       "source": [
         "# Searching at different scales"
@@ -256,8 +241,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "X3Ct1f_6bknl",
-        "colab_type": "text"
+        "id": "X3Ct1f_6bknl"
       },
       "source": [
         "The main problem is that our network expects cars as 32x32 patches. Of course, in our image there are cars larger than that. \n",
@@ -270,9 +254,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p6wmUffwV_ij",
-        "colab_type": "code",
-        "colab": {}
+        "id": "p6wmUffwV_ij"
       },
       "source": [
         "#Create an image pyramid\n",
@@ -281,30 +263,26 @@
         "imrgb_2 = cv2.pyrDown(imrgb)\n",
         "plt.imshow(imrgb_2, cmap=plt.cm.binary)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eZhoG7ACWqIy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "eZhoG7ACWqIy"
       },
       "source": [
         "#Downsample the former by 2 (so the original by 4)\n",
         "imrgb_4 = cv2.pyrDown(imrgb_2)\n",
         "plt.imshow(imrgb_4, cmap=plt.cm.binary)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LWA1C3VHW6ed",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LWA1C3VHW6ed"
       },
       "source": [
         "#Search in downsampled images\n",
@@ -332,7 +310,7 @@
         "     \n",
         "plt.imshow(im_result, cmap=plt.cm.binary)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
