Added pre-trained models from TFHub

--- a/deeplearningbasics/deploying_imageclassification.ipynb
+++ b/deeplearningbasics/deploying_imageclassification.ipynb
@@ -8,13 +8,14 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyORIfmuasZRiJMaXmD3bldk",
+      "authorship_tag": "ABX9TyMOaCZFrLqbNImnkz+6yPWR",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -74,19 +75,35 @@
         "id": "lPwzc8rJE5dk"
       },
       "source": [
+        "#Numpy module\n",
+        "import numpy as np\n",
+        "\n",
         "#Import OpenCV\n",
         "import cv2\n",
         "#Import tensorflow\n",
         "import tensorflow as tf\n",
         "\n",
+        "#We can use OpenCV in Colab, but not its functions for creating plots\n",
+        "#We use matplotlib for generating plots\n",
+        "from matplotlib import pyplot as plt\n",
+        "from matplotlib import cm\n",
+        "\n",
         "#We use the library scikit to read images from url \n",
         "#In OpenCV, the function to read from file is cv2.imread\n",
-        "from skimage import io\n",
-        "\n",
+        "from skimage import io\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dvnSxf6Z4YqI"
+      },
+      "source": [
         "#Mount the drive\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n"
+        "drive.mount('/content/drive')"
       ],
       "execution_count": null,
       "outputs": []
@@ -309,6 +326,179 @@
         "      cv2.rectangle(im_result,upper_left, bottom_right, (0,0,255), 2)\n",
         "     \n",
         "plt.imshow(im_result, cmap=plt.cm.binary)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5nI8JTiv3hLo"
+      },
+      "source": [
+        "#Using pre-trained models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2GXkFUOh3l1s"
+      },
+      "source": [
+        "import tensorflow_hub as hub\n",
+        "\n",
+        "classifier_model =\"https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4\"\n",
+        "\n",
+        "IMAGE_SHAPE = (224, 224)\n",
+        "\n",
+        "classifier = tf.keras.Sequential([\n",
+        "    hub.KerasLayer(classifier_model, input_shape=IMAGE_SHAPE+(3,))\n",
+        "])\n",
+        "\n",
+        "print(classifier.summary)\n",
+        "\n",
+        "labels_path = tf.keras.utils.get_file('ImageNetLabels.txt','https://storage.googleapis.com/download.tensorflow.org/data/ImageNetLabels.txt')\n",
+        "imagenet_labels = np.array(open(labels_path).read().splitlines())\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TOcUrMiM39So"
+      },
+      "source": [
+        "im_input = io.imread('https://robotics.upo.es/~lmercab/rva/bookshelf.jpg')\n",
+        "\n",
+        "im_input = im_input/255.0\n",
+        "print(im_input.shape)\n",
+        "plt.figure(figsize=(10,10))\n",
+        "plt.imshow(im_input)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ScRpTyv64Nbj"
+      },
+      "source": [
+        "res = tf.image.resize(im_input, IMAGE_SHAPE)\n",
+        "\n",
+        "print(res.shape)\n",
+        "\n",
+        "result = classifier.predict(res[np.newaxis, ...])\n",
+        "print(result.shape)\n",
+        "\n",
+        "predicted_class = np.argmax(result[0], axis=-1)\n",
+        "print(predicted_class)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IMRFuDHV4sHf"
+      },
+      "source": [
+        "plt.figure()  \n",
+        "plt.imshow(res)\n",
+        "plt.axis('off')\n",
+        "predicted_class_name = imagenet_labels[predicted_class]\n",
+        "_ = plt.title(\"Prediction: \" + predicted_class_name.title())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QdbXGPXD7lGs"
+      },
+      "source": [
+        "from tensorflow.keras.utils import to_categorical\n",
+        "\n",
+        "#Load train dataset for CIFAR10\n",
+        "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
+        "\n",
+        "from matplotlib import pyplot as plt\n",
+        "plt.imshow(x_test[100], cmap=plt.cm.binary)\n",
+        "\n",
+        "#Normalize data\n",
+        "x_train = x_train.astype('float32')\n",
+        "x_test = x_test.astype('float32')\n",
+        "x_train /= 255\n",
+        "x_test /= 255\n",
+        "\n",
+        "# Convert class vectors to binary class matrices.\n",
+        "y_train = to_categorical(y_train, 10)\n",
+        "y_test = to_categorical(y_test, 10)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rtU31Emv70YF"
+      },
+      "source": [
+        "model = tf.keras.Sequential([\n",
+        "    hub.KerasLayer(\"https://tfhub.dev/google/tf2-preview/mobilenet_v2/feature_vector/4\", output_shape=[1280],\n",
+        "                   trainable=False),  # Can be True.\n",
+        "    tf.keras.layers.Dense(10, activation='softmax')\n",
+        "])\n",
+        "\n",
+        "model.build([None, 224, 224, 3])  # Batch input shape.\n",
+        "\n",
+        "print(model.summary())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tXXacEeA8qsK"
+      },
+      "source": [
+        "x_resized = tf.image.resize(x_train[0:10000,:,:,:], IMAGE_SHAPE)\n",
+        "\n",
+        "print(x_resized.shape)\n",
+        "print(y_train.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aETNCGm28MSE"
+      },
+      "source": [
+        "model.compile(loss=\"categorical_crossentropy\",\n",
+        "              optimizer=\"sgd\",\n",
+        "              metrics = ['accuracy'])\n",
+        "\n",
+        "_ = model.fit(x_resized, y_train[0:10000,:], epochs=10, verbose = 1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rvm9TOi28OT_"
+      },
+      "source": [
+        "x_resized = tf.image.resize(x_test[2000:3000,:,:,:], IMAGE_SHAPE)\n",
+        "\n",
+        "_ , test_acc = model.evaluate(x_resized, y_test[2000:3000,:])\n",
+        "\n",
+        "print('Accuracy:', test_acc*100)"
       ],
       "execution_count": null,
       "outputs": []
